backend/vulnerability_analysis/testing/npr1/segments/klee-out-1/test000001.user.err
Error: Wrong size given to klee_make_symbolic
File: testing/null_ptr/segments/segment_2_klee.c
Line: 17
assembly.ll line: 7894
State: 1
Stack: 
	#000007894 in __klee_posix_wrapped_main() at testing/null_ptr/segments/segment_2_klee.c:17
	#100006070 in __user_main(1, 139934495145984, 139934495146000) at src/runtime/POSIX/klee_init_env.c:245
	#200000524 in __uClibc_main(139918716174336, 1, 139934495145984, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000689 in main(1, 139934495145984)
